--- a/tye/templates/tye/leader.html
+++ b/tye/templates/tye/leader.html
@@ -2,16 +2,18 @@
 {% block content %}
     <h1>Our Leadership Team</h1>
     {% for instructor in instructors %}
-        {% if instructor.leader is True %}
-            <div class="content-section">
-                <div class="media">
-                    <img class="rounded-circle account-img" src="{{ instructor.image.url }}">
-                    <div class="media-body">
-                        <h2 class="account-heading">{{ instructor.name }}</h2>
-                        <p class="text-secondary">{{ instructor.title }}</p>
+        {% if instructor.active_status is True %}
+            {% if instructor.leader is True %}
+                <div class="content-section">
+                    <div class="media">
+                        <img class="rounded-circle account-img" src="{{ instructor.image.url }}">
+                        <div class="media-body">
+                            <h2 class="account-heading">{{ instructor.name }}</h2>
+                            <p class="text-secondary">{{ instructor.title }}</p>
+                        </div>
                     </div>
-                </div>
-            </div>  
+                </div>  
+            {% endif %}
         {% endif %}        
     {% endfor %}
 {% endblock content %}
