--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,6 +4,7 @@
     <div class="content-section">
       <div class="media">
         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+        
         <div class="media-body">
           <h2 class="account-heading">{{ user.username }}</h2>
           <p class="text-secondary">{{ user.email }}</p>
@@ -18,6 +19,9 @@
           </fieldset>
           <div class="form-group">
               <button class="btn btn-outline-info" type="submit">Update</button>
+          </div>
+          <div class="form-group">
+              <a class="btn btn-outline-secondary" href="{% url 'student' %}">My Student</a>
           </div>
       </form>
     </div>
