more updates on Oct 5

--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -20,6 +20,9 @@
           <div class="form-group">
               <button class="btn btn-outline-info" type="submit">Update</button>
           </div>
+          <div class="media-body">
+            <a class="nav-item nav-link" href="{% url 'tye-student'%} ">My Students</a>
+          </div>
 
       </form>
     </div>
