--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -20,10 +20,10 @@
           <div class="form-group">
               <button class="btn btn-outline-info" type="submit">Update</button>
           </div>
-          <div class="media-body">
-            <a class="nav-item nav-link" href="{% url 'tye-student'%} ">My Students</a>
-          </div>
-
       </form>
     </div>
+
+    <div>
+        <a class="nav-item nav-link" href="{% url 'tye-student' %}">My Students </a>
+  </div>
 {% endblock content %}
