--- a/enroll/templates/enroll/student_detail.html
+++ b/enroll/templates/enroll/student_detail.html
@@ -3,16 +3,10 @@
   <article class="media content-section">
     <div class="media-body">
       <div class="article-metadata">
-        <a class="mr-2" href="{% url 'profile' %}">{{ object.parent }}</a>
-        
-        {% if object.parent == user %}
-          <div>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'student-update' object.id %}">Update</a>
-            <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'student-delete' object.id %}">Delete</a>
-          </div>
-        {% endif %}
+        <h3><a class="mr-2" href="{% url 'profile' %}">{{ object.parent }}</a></h3> 
+       
       </div>
-      <h2 class="article-title">{{ object.name }}</h2>
+      <h4 class="article-title">{{ object.name }}</h4>
         <div class="form-group">
             <p>Email: {{ object.email }}</p>
             <p>School: {{ object.school }}</p>
@@ -20,7 +14,17 @@
             <p>Country: {{ object.country }}</p>
             <p>Grade: {{ object.grade}}</p>
         </div>
+        {% if object.parent == user %}
+          <div>
+            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'student-update' object.id %}">Update</a>
+            
+          </div>
+        {% endif %}
+
     
     </div>
   </article>
+  <div>
+        <a class="nav-item nav-link" href="{% url 'tye-student' %}">Back to Students </a>
+  </div>
 {% endblock content %}
