--- a/tye/templates/tye/instructor.html
+++ b/tye/templates/tye/instructor.html
@@ -1,16 +1,20 @@
-
 {% extends 'tye/base.html'%}
 {% block content %}
-    <h1>Instructors</h1>
-
+     <h1>Instructors</h1>
         {% for instructor in instructors %}
-                {% if instructor.active_status is True %}
-                        <h2>{{ instructor.name }}</h2>
-                        <p> Instructor </p>
-                        <p>{{ instructor.bio}} </p>
-                {% endif %}
-        
+            {% if instructor.active_status is True %}
+                <div class="content-section">
+                    <div class="media">
+                        <img class="rounded-circle account-img" src="{{ instructor.image.url }}">
+                            <div class="media-body">
+                                <h2 class="account-heading">{{ instructor.name }}</h2>
+                                <p> {{ course.name }}Instructor </p>
+                                <p class="text-secondary">{{ instructor.bio }}</p>
+                            </div>
+                    </div>
+                </div>  
+            {% endif %}
+                
         {% endfor %}
-  
-    
+             
 {% endblock content %}
