--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -6,7 +6,7 @@
         <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
         
         <div class="media-body">
-          <h2 class="account-heading">{{ user.username }}</h2>
+          <h4 class="account-heading">{{ user.username }}</h4>
           <p class="text-secondary">{{ user.email }}</p>
         </div>
       </div>
@@ -25,5 +25,7 @@
 
     <div>
         <a class="nav-item nav-link" href="{% url 'tye-student' %}">My Students </a>
+  
+    </div>
   </div>
 {% endblock content %}
