--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -25,6 +25,7 @@
 
     <div>
         <a class="nav-item nav-link" href="{% url 'tye-student' %}">My Students </a>
+        <a class="nav-item nav-link" href="#">My Enrolled Classes </a>
   
     </div>
   </div>
