--- a/tye/templates/tye/class.html
+++ b/tye/templates/tye/class.html
@@ -15,7 +15,7 @@
                     <p>Prerequsites: {{ course.prerequisite }}</p>
                     <p>Materials: {{ course.material }}</p>
                     <p>Description: {{ course.description }}
-                    
+                    <p>Price: ${{ course.price }}
                     <p><a class="btn btn-secondary btn-sm mt-1 mb-1" href="#}">Enroll</a></p>
                 </div>
             </div>
