--- a/tye/templates/tye/class.html
+++ b/tye/templates/tye/class.html
@@ -16,7 +16,7 @@
                     <p>Materials: {{ course.material }}</p>
                     <p>Description: {{ course.description }}
                     <p>Price: ${{ course.price }}
-                    <p><a class="btn btn-secondary btn-sm mt-1 mb-1" href="#}">Enroll</a></p>
+                    <p><a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ object.get_add_to_cart_url }}">Enroll</a></p>
                 </div>
             </div>
         </div>          
